# docs

./: .env.example  .gitignore  .gitleaks.toml  README.md  README_MAESTRO.md  ai_maestro_service.py  arranger-rhythm-tools.mdx  bootable-os.mdx  brazilian-genres.mdx  docs.json  estudio_master.py  firebase.json  frevo-arranger.mdx  innovative-plugins.mdx  installation.mdx  maestro.sh  mastering-assistant.mdx  midi_composer.py  notebooklm_integration.py  piano-teacher.mdx  raspberry-workstation.mdx  reaper-plugins.mdx  reaper-theme.mdx  requirements.txt  setup_maestro.sh  sound-libraries.mdx  theory-resources.mdx  timbres-hits.mdx  treinar_maestro.py
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build-apk.yml  codeql.yml  deploy-functions.yml  functions-ci.yml  init.yml  security.yml
app/: pubspec.yaml
app/lib/: main.dart
app/lib/core/: app_theme.dart
app/lib/models/: music_theory_models.dart  note_model.dart  patch_model.dart  synkrony_models.dart  synkrony_project_model.dart
app/lib/services/: ai_maestro_service.dart  ai_router_service.dart  auth_service.dart  semantic_mapper.dart
app/lib/widgets/: export_midi_button.dart  import_musicxml_button.dart
docs/: ADVANCED_ARTICULATIONS_XPS10.md  CODE_CPP_EXAMPLES.md  GESTURAL_ARTICULATION_ENGINE_XPS10.md  INTELLIGENT_TIMBRE_ALGORITHM.md  MATH_FRAMEWORK_XPS10.md  MIX_READY_PRESETS_XPS10.md  MULTI_LANGUAGE_DSP_RECIPES_XPS10.md  PNAB_2026_VIABILIDADE.md  PRODUCT.md  REALISM_SOUND_ENGINE_XPS10.md  RECIPE_FAMILIES_XPS10.md  ROADMAP.md  SCHEMA.md  SOURCE_FINDINGS_CONSOLIDATION.md  SYNTHESIS_CODEBOOK_XPS10.md  VISUAL_AUDIO_ARCHITECTURE_PLAN.md  XPS10_GUARDRAILS.md  XPS10_PROGRAMMING_GUIDE.md
docs/pnab/: cronograma_execucao.md  fundamentacao_teorica.md  impacto_cultural.md  orcamento_estimativo.md
essentials/: mzx500-firmware-reverse-engineering.mdx
firebase/: firestore.indexes.json  firestore.rules  storage.rules
functions/: .eslintrc.cjs  eslint.config.cjs  package-lock.json  package.json  tsconfig.json
functions/resources/reaper-scripts/: SK_Core.lua
functions/src/: index.ts  orchestrator.ts  shims.d.ts  types.ts
functions/src/agents/: arrangement_agent.ts  arranger_agent.ts  composer_agent.ts  harmony_agent.ts  knowledge_agent.ts  maestro_agent.ts  melody_agent.ts  mix_agent.ts  musescore_agent.ts  notation_agent.ts  performance_agent.ts  reaper_agent.ts  regional_agent.ts  style_agent.ts  synth_agent.ts  theorist_agent.ts
functions/src/db/: postgres.ts  redis.ts
functions/src/kb/: pdf_ingest.ts  search.ts
functions/src/middleware/: cache.ts
functions/src/migrations/: 001_initial.sql
functions/src/scripts/: seed_music_theory.ts
functions/src/services/: audioDownloader.ts  musescoreService.ts  reaperService.ts
functions/src/synthesis/: advanced_playbook.ts  algorithms.ts  gesture_engine.ts  mix_bus.ts  (+5 more)
mm8-performance-host/: CMakeLists.txt  README.md
mm8-performance-host/.github/workflows/: windows-ci.yml
mm8-performance-host/Docs/: README.md  TROUBLESHOOTING.md
mm8-performance-host/Resources/: mm8-factory-order.json  mm8-placeholder.txt
mm8-performance-host/Resources/Performances/: Demo_Live_Set_A.json  Demo_Orchestral_Split.json  Demo_Synth_Layers.json
mm8-performance-host/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
mm8-performance-host/Source/Engine/: AppConfig.cpp  FactoryBank.cpp  FactoryBank.h  MidiScheduler.h  PerformanceEngine.cpp  PerformanceEngine.h  PerformanceStore.cpp  PerformanceStore.h  PerformanceTypes.h  PluginScanner.cpp  PluginScanner.h
mm8-performance-host/Source/Ui/: PartsGrid.h
mm8-performance-host/config/: plugin_paths.json
mm8-performance-host/installer/: installer.iss
mm8-performance-host/scripts/: bootstrap.ps1  build_and_repair.ps1  build_debug.ps1  build_release.ps1  package_installer.ps1
mm8-performance-host/src/: Main.cpp
mm8-performance-host/src/audio/: AudioDeviceManager.cpp  AudioDeviceManager.h  EngineHost.cpp  EngineHost.h  LayerRouter.cpp  LayerRouter.h  Mixer.cpp  Mixer.h
mm8-performance-host/src/core/: AppConfig.cpp  AppConfig.h  AppState.cpp  AppState.h  Logger.cpp  Logger.h  MidiScheduler.cpp  PerformanceEngine.cpp  PerformanceEngine.h  PerformanceStore.cpp  PerformanceTypes.h  Persistence.cpp  Persistence.h  Settings.cpp  Settings.h
mm8-performance-host/src/install/: InnoSetupScript.iss
mm8-performance-host/src/midi/: ActionDispatcher.cpp  ActionDispatcher.h  MM8Profile.cpp  MM8Profile.h  MappingEngine.cpp  MappingEngine.h  MidiDeviceManager.cpp  MidiDeviceManager.h  XPS10Profile.cpp  XPS10Profile.h
mm8-performance-host/src/plugins/: EngineRegistry.cpp  EngineRegistry.h  PluginCache.cpp  PluginCache.h  PluginScanner.cpp  PluginScanner.h
mm8-performance-host/src/presets/: PresetIndex.cpp  PresetIndex.h  PresetRules.cpp  PresetRules.h  PresetScanner.cpp  PresetScanner.h  SnapshotManager.cpp  SnapshotManager.h
mm8-performance-host/src/ui/: LookAndFeel.cpp  LookAndFeel.h  MainComponent.cpp  MainComponent.h  PartsGrid.cpp  PartsGrid.h
mm8-performance-host/tests/: PluginCacheTests.cpp  PresetIndexTests.cpp  PresetRulesTests.cpp
piano_integral_template/: README.md  package.json
piano_integral_template/assets/: logo.txt
piano_integral_template/desktop_build/: main.js
piano_integral_template/frontend/: index.html  package.json
piano_webapp/: app.py
piano_webapp/static/: app.js
piano_webapp/templates/: index.html
python_backend/: audio_analyzer.py  musescore_integration.py  reaper_bridge.py
raspi-workstation/: README.md  main.py  raspi-workstation.service
raspi-workstation/engines/: __init__.py  accordion_engine.py  analog_engine.py  base.py  brass_engine.py  choir_engine.py  d50_engine.py  dx7_engine.py  fm_engine.py  korg_m_engine.py  orchestral_engine.py  organ_engine.py  piano_engine.py  quadrasynth_engine.py  synth_engine.py  woodwind_engine.py  xp80_engine.py
raspi-workstation/scripts/: build_image.sh
raspi-workstation/ui/: main_window.py
reaper_scripts/: maestro_integration.lua
scripts/: Build-APK.ps1
synkrony/config/: SynKrony_Library.json
(+35 files in other folders)
